--- a/pom.xml
+++ b/pom.xml
@@ -72,5 +72,10 @@
             <artifactId>lucene-queryparser</artifactId>
             <version>5.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
     </dependencies>
 </project>
